elasticsearch-hq/elasticsearch-hq.deploy.yaml
# https://medium.com/@awkwardferny/getting-started-with-kubernetes-ingress-nginx-on-minikube-d75e58f52b6c

# USAGE: kubectl apply -f elasticsearch-hq.deploy.yaml
# kubectl get deploy
# kubectl get pods
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-hq
  namespace: elasticsearch-hq
  labels:
    run: nginx
    k8s-app: elasticsearch-hq
    version: release-v3.5.0
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: efk
spec:
  replicas: 1
  selector:
    matchLabels:
      # app: elasticsearch-hq
      run: nginx
      k8s-app: elasticsearch-hq
      version: release-v3.5.0
  template:
    metadata:
      labels:
        # app: elasticsearch-hq
        run: nginx
        k8s-app: elasticsearch-hq
        version: release-v3.5.0
        kubernetes.io/cluster-service: "true"
        addonmanager.kubernetes.io/mode: Reconcile
        boss-part-of: efk
    spec:
      containers:
      - name: elasticsearch-hq
        image: elastichq/elasticsearch-hq:release-v3.5.0
        resources:
          limits:
            memory: 512Mi
            cpu: 2000m
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - containerPort: 5000
